added new section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0a7f3b7aec.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -18,5 +19,25 @@
             <button class="btn-primary">Contact Us</button>
         </div>
     </header>
+    <main>
+        <section class="failure-container">
+            <div class="failure-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="failure-text">
+                <h3 class="failure-title">My failures of <br> previous year</h3>
+                <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <div class="failure-list">
+                    <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                    <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular belief.</p>
+                    <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</p>
+                    <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                    <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular simply.</p>
+
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
