added develop section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </header>
     <main>
+        <!-- failure section -->
         <section class="failure-container">
             <div class="failure-img">
                 <img src="images/person.png" alt="">
@@ -33,11 +34,23 @@
                     <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</p>
                     <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
                     <p class="failure-checklist"><i class="fa-solid fa-check"></i> Contrary to popular simply.</p>
-
                 </div>
             </div>
-
         </section>
+        <!-- develop section -->
+        <section class="develop-container">
+            <div class="develop-text">
+                <h3 class="failure-title">Develop <br> Without Limits</h3>
+                <p class="failure-description">WE HELP TO CREATE STRATEGIES, DESIGN & DEVELOPMENT. We never underestimate any parts of each project as they're all essential to meeting the ultimate goal. you'll be engaged in with our positive and enthusiastic attitude. We never underestimate any parts of each project as they're all essential to meeting the ultimate goal.you'll be engaged in with our positive and enthusiastic attitude.</p>
+                <div>
+                    <button class="btn-primary">Read the Documentation</button>
+                </div>
+            </div>
+            <div class="develop-img">
+                <img src="images/coding.png" alt="">
+            </div>
+        </section>
+         
     </main>
 </body>
 </html>
