--- a/index.html
+++ b/index.html
@@ -50,7 +50,66 @@
                 <img src="images/coding.png" alt="">
             </div>
         </section>
-         
+         <!--my plans section  -->
+         <section class="my-plan-container">
+            <h3 class="failure-title my-plan-title">My Plans</h3>
+            <div class="plans-list">
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <h3 class="plans-title">Web Development</h3>
+                    <p class="plans-description">I want to start</p>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="plans-title">Javascript</h3>
+                    <p class="plans-description">I want to learn</p>
+                </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3 class="plans-title">Smoking Habit</h3>
+                    <p class="plans-description">I want to end</p>
+                </div>
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3 class="plans-title">ecommerce</h3>
+                    <p class="plans-description">I want to develop</p>
+                </div>
+            </div>
+         </section>
+         <!-- call section -->
+         <section class="call-container">
+            <div class="call-text">
+                <h3 class="call-title">Awlays keep a positive <br> mindset</h3>
+                <button class="btn-primary">Call Now</button>
+            </div>
+         </section>
     </main>
+    <footer>
+       <div class="footer-section">
+        <div class="future-area">
+            <h3 class="footer-title">Future</h3>
+            <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <div class="footer-address">
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+            </div>
+            <div class="footer-icons">
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
+            </div>
+        </div>
+        <div class="subscribe-area">
+            <h3 id="subscribe-title">Subscribe</h3>
+            <input id="btn-email" type="email" value="" placeholder="Enter Your Email">
+            <div>
+                <button class="btn-subscribe">Subscribe</button>
+            </div>
+        </div>
+       </div>
+       <div id="footer-copy">
+          <p>©Ashik Iqbal 2023 || All right reserved.</p>
+       </div>
+    </footer>
 </body>
 </html>
